[package]
name = "conways-game-of-life"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[alias]   # Command aliases
win="build --target x86_64-pc-windows-gnu"

[dependencies]
console_engine = "2.6.1" 
rand = "0.8.5"
bevy_ecs = "0.8.1"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
crossterm = "0.27.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
